--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
     <script src="main.js"></script>
+    <script src="gui.js"></script>
 </head>
 <body>
    <h1>Rock Paper Scissors</h1> 
+   <div>
+        <button>Rock</button>
+        <button>Paper</button>
+        <button>Scissors</button>
+   </div>
 </body>
 </html>
