--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
    <h1>Rock Paper Scissors</h1> 
    <div>
-        <button>Rock</button>
-        <button>Paper</button>
-        <button>Scissors</button>
+        <button id="rockBtn">Rock</button>
+        <button id="paperBtn">Paper</button>
+        <button id="scissorsBtn">Scissors</button>
    </div>
 </body>
 </html>
