Added a 'p' that displays who won a round each time a user click on a button

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
         <button id="paperBtn">Paper</button>
         <button id="scissorsBtn">Scissors</button>
    </div>
+   <div id="result"></div>
 </body>
 </html>
